--- a/paper/lrvb_nips.rnw
+++ b/paper/lrvb_nips.rnw
@@ -172,7 +172,7 @@ GGPlotLegend <- function(a.gplot){
 }
 
 # Turn off caching if you need to regenerate any of the R code.
-opts_chunk$set(cache=FALSE)
+opts_chunk$set(cache=TRUE)
 @
 
 %%%%%%%%%%%%%%%%%
@@ -194,20 +194,16 @@ any model estimates---and to do so coherently across all of the model variables.
 a Bayesian posterior distribution, has grown in
 popularity due to its fast runtime on large-scale data sets
 \cite{blei:2003:lda, blei:2006:dp, hoffman:2013:stochastic}.
-%\cite{blei:2006:dp, hoffman:2013:stochastic}.
 But it is well known that a major failing of MFVB is that it gives
 underestimates of the uncertainty of model variables that can be arbitrarily
 bad, even when approximating a simple multivariate Gaussian distribution
 \citep{mackay:2003:information,bishop:2006:pattern,turner:2011:two}.
-%\citep{bishop:2006:pattern,turner:2011:two}.
 And MFVB provides no information about how
 the uncertainties in different model variables interact
 \cite{wang:2005:inadequacy, bishop:2006:pattern, rue:2009:approximate, turner:2011:two}.
-%\cite{wang:2005:inadequacy, bishop:2006:pattern, turner:2011:two}.
 
 By generalizing linear response methods from statistical physics
 \cite{parisi:1988:statistical, opper:2003:variational, opper:2001:advancedmeanfield, tanaka:2000:information}
-%\cite{opper:2003:variational, opper:2001:advancedmeanfield, tanaka:2000:information}
 to exponential family variational posteriors, we develop a methodology that
 augments MFVB to deliver accurate uncertainty estimates for model
 variables---both for individual variables and coherently across variables. In
