Fix typo in GMM Hessian

--- a/paper/appendix.tex
+++ b/paper/appendix.tex
@@ -753,7 +753,7 @@ The remaining $\Lambda$ derivatives are zero. The only nonzero second
 derivatives for $\log\pi$ are to $Z$ and are given by
 %
 \begin{eqnarray*}
-\frac{\partial^{2}H}{\partial\log\pi_{j}\partial z_{nk}} & = & 1
+\frac{\partial^{2}H}{\partial\log\pi_{k}\partial z_{nk}} & = & 1
 \end{eqnarray*}
 %
 Note in particular that $H_{zz} = 0$, allowing efficient calculation of
