--- a/paper/arxiv/lrvb_nips_arxiv.bib
+++ b/paper/arxiv/lrvb_nips_arxiv.bib
@@ -126,6 +126,7 @@
   author={Turner, R.~E. and Sahani, M.},
   booktitle={Bayesian Time Series Models},
   editor={Barber, D. and Cemgil, A.~T. and Chiappa, S.},
+  publisher={Cambridge University Press},
   year={2011}
 }
 
