Re-build NIPS version

--- a/paper/lrvb_nips.rnw
+++ b/paper/lrvb_nips.rnw
@@ -4,8 +4,8 @@
 % Set to toggletrue to use arxiv formatting.
 \usepackage{etoolbox}
 \newtoggle{arxivformat}
-\toggletrue{arxivformat}
-%\togglefalse{arxivformat}
+%\toggletrue{arxivformat}
+\togglefalse{arxivformat}
 
 \iftoggle{arxivformat} {
   \usepackage{natbib}
